[gd_scene load_steps=4 format=3 uid="uid://cs01wtptu24s4"]

[ext_resource type="Script" path="res://damage_system/Damage_system.gd" id="1_5vdwo"]
[ext_resource type="PackedScene" uid="uid://mqjaf0hjdy30" path="res://damage_system/projectile.tscn" id="2_y1exi"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4tgyh"]
size = Vector3(0.597656, 1.70731, 1)

[node name="Damage_system" type="Area3D" groups=["charachter"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_5vdwo")
projectal = ExtResource("2_y1exi")

[node name="DS_coll" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0283203, 0.854202, 0)
shape = SubResource("BoxShape3D_4tgyh")

[node name="Melee_ray" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.13334, 0)
target_position = Vector3(0, -1.2, 0)
collision_mask = 3
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false

[node name="projectal_spawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13795, -0.75254)

[node name="shoot_cd" type="Timer" parent="."]
one_shot = true

[node name="bullet_density_cd" type="Timer" parent="."]
one_shot = true
